Fixed model locations, removed extra comments, fixed remBG folder selection

--- a/_Helper.ipynb
+++ b/_Helper.ipynb
@@ -114,7 +114,6 @@
     "                new_file_path = os.path.join(source_folder, new_filename)\n",
     "                try:\n",
     "                    img.save(new_file_path, 'PNG')\n",
-    "                    # os.remove(file_path)\n",
     "                except:\n",
     "                    img.convert('RGB').save(new_file_path, \"PNG\", optimize=True)\n",
     "            os.remove(file_path)\n",
@@ -166,8 +165,7 @@
     "        image_no_black_bars = remove_black_bars(image)\n",
     "        \n",
     "        pil_image = Image.fromarray(cv2.cvtColor(image_no_black_bars, cv2.COLOR_BGR2RGB))\n",
-    "        h,w = pil_image.size\n",
-    "        # print(filename, \"\\n\",h*w, x*y)            \n",
+    "        h,w = pil_image.size         \n",
     "        \n",
     "        hash = str(imagehash.average_hash(pil_image))\n",
     "        \n",
@@ -201,8 +199,8 @@
    "source": [
     "current_folder = os.getcwd()\n",
     "\n",
-    "modelFile = os.path.join(current_folder, \"opencv_face_detector_uint8.pb\")\n",
-    "configFile = os.path.join(current_folder, \"opencv_face_detector.pbtxt\")\n",
+    "modelFile = os.path.join(current_folder, \"models\", \"opencv_face_detector_uint8.pb\")\n",
+    "configFile = os.path.join(current_folder, \"models\", \"opencv_face_detector.pbtxt\")\n",
     "\n",
     "if os.path.exists(modelFile) != True or os.path.exists(configFile) != True:\n",
     "    print(\"ERROR: KEY FILES FOR RUNNING THIS MODEL NOT FOUND, PLEASE FIND THEM AND INSTALL THEM\")\n",
@@ -210,31 +208,16 @@
     "else:\n",
     "    net = cv2.dnn.readNetFromTensorflow(modelFile, configFile)\n",
     "\n",
-    "    def calculate_image_sharpness(image):\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Calculate the sharpness of an image using the variance of the Laplacian\n",
-    "        \"\"\"\n",
-    "        \n",
+    "    def calculate_image_sharpness(image):        \n",
     "        if image is None or image.size == 0:\n",
     "            return 0\n",
     "        return cv2.Laplacian(image, cv2.CV_64F).var()\n",
     "\n",
-    "    def is_image_blurry(image, blur_threshold):\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Check if an image is blurry using the variance of the Laplacian method.\n",
-    "        \"\"\"\n",
-    "        \n",
+    "    def is_image_blurry(image, blur_threshold):        \n",
     "        variance_of_laplacian = cv2.Laplacian(image, cv2.CV_64F).var()\n",
     "        return variance_of_laplacian < blur_threshold\n",
     "\n",
     "    def detect_faces_and_evaluate(image, min_confidence, min_size, min_sharpness, blur_threshold):\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Detect faces in an image and evaluate based on size, sharpness, and blurriness.\n",
-    "        \"\"\"\n",
-    "        \n",
     "        if image is None or image.size == 0:\n",
     "            return []\n",
     "        if is_image_blurry(image, blur_threshold):\n",
@@ -262,11 +245,6 @@
     "        return faces_detected\n",
     "\n",
     "    def remove_black_bars(image):\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Remove black bars from an image.\n",
-    "        \"\"\"\n",
-    "\n",
     "        gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "        _, thresh = cv2.threshold(gray, 1, 255, cv2.THRESH_BINARY)\n",
     "        contours, _ = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
@@ -290,7 +268,7 @@
     "    if not os.path.exists(selected_images_folder):\n",
     "        os.makedirs(selected_images_folder)\n",
     "    \n",
-    "    image_ratings = []  # List to store ratings and file paths\n",
+    "    image_ratings = []\n",
     "    \n",
     "    files = [f for f in os.listdir(folder_path) if f.endswith(('.jpg', '.jpeg', '.png', '.bmp', '.tiff', '.webp'))]\n",
     "    for filename in tqdm(files, desc=\"Evaluating Images\"):\n",
@@ -306,7 +284,6 @@
     "            rating = sum([face[0] + face[1] + face[2] for face in faces_detected]) \n",
     "            image_ratings.append((rating, file_path))\n",
     "    \n",
-    "    # Sort images based on ratings\n",
     "    if top_n == 0:\n",
     "        top_n = len(files)\n",
     "    top_images = sorted(image_ratings, key=lambda x: x[0], reverse=True)[:top_n]\n",
@@ -370,7 +347,8 @@
     "            output_image = Image.open(io.BytesIO(output_image))\n",
     "            output_image.save(output_path)\n",
     "\n",
-    "remove_background_from_images(selected_folder, os.path.join(selected_folder, \"No_BG\"))"
+    "remove_background_from_images(selected_folder, os.path.join(selected_folder, \"No_BG\"))\n",
+    "selected_folder = os.path.join(selected_folder, \"No_BG\")"
    ]
   },
   {
@@ -413,6 +391,7 @@
     "\n",
     "        # Increase the size of the face bounding box by imp factor\n",
     "        fw, fh = int(fw * imp), int(fh * imp)\n",
+    "        fw, fh = max(0, fw), max(0, fh)\n",
     "\n",
     "        # Ensure the bounding box dimensions do not exceed image dimensions\n",
     "        if min(fw, fh) > min(ow, oh):\n",
@@ -486,12 +465,8 @@
     "    if len(face_failed) != 0:\n",
     "        print(\"\\nThese images failed: \\nReason: Face not found: \\n\", face_failed, \"\\nCount:\", len(face_failed))\n",
     "\n",
-    "# --------------------> If didn't use remBG <--------------------\n",
-    "# main_call(selected_folder, x_crop, y_crop, imp = 2)\n",
-    "\n",
-    "# --------------------> If you do use remBG <--------------------\n",
     "# IMP is a variable that allows the cropping boundary to increase by img_size*imp, suggested: imp = 2\n",
-    "main_call(os.path.join(selected_folder, \"No_BG\"), x_crop, y_crop, imp = 2)"
+    "main_call(selected_folder, x_crop, y_crop, imp = 2)"
    ]
   },
   {
@@ -602,19 +577,16 @@
     "            with open(file_path, 'r', encoding='utf-8') as file:\n",
     "                content = file.read().lower()\n",
     "                words = content.split(\", \")\n",
-    "                # print(\"\\n\", words)\n",
     "\n",
     "            # Create a new list without the words to delete\n",
     "            updated_words = [word for word in words if word not in words_list]\n",
     "\n",
     "            # Add UniqueWord to the first of the list if not exist\n",
     "            if words[0] != charName.lower() or words[0] != charName:\n",
-    "                # print(words[0].lower())\n",
     "                updated_words.insert(0, charName)\n",
     "\n",
     "            # Join the updated words back into a string\n",
     "            updated_content = ', '.join(updated_words)\n",
-    "            # print(\"\\nUpdated:\", updated_content)\n",
     "\n",
     "            with open(file_path, 'w', encoding='utf-8') as file:\n",
     "                file.write(updated_content)\n",
